monitoring/nightingale/2.service-cluster.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nightingale
  namespace: monitoring
  labels:
    app: nightingale
spec:
  sessionAffinity: ClientIP
  selector:
    app: nightingale
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 17000
      targetPort: 17000
