monitoring/nightingale/2.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nightingale
  namespace: monitoring
  labels:
    app: nightingale
spec:
  sessionAffinity: ClientIP
  selector:
    app: nightingale
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 17000
      targetPort: 17000
    - name: ibex
      protocol: TCP
      port: 20090
      targetPort: 20090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nightingale
  namespace: monitoring
  labels:
    app: nightingale
spec:
  ingressClassName: nginx
  rules:
  - host: nightingale.github.icu
    http:
      paths:
      - backend:
          service:
            name: nightingale
            port:
              number: 17000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nightingale.github.icu
    secretName: github-tls
